# sse-project

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  ToDo.txt  build.bat  build.sh  conanfile.txt  conanprofileLinux  conanprofileWindows  debug.bat  debug.sh  lineCounter.sh  setup.sh  test.slang
archive/BigObjects/: CustomMath.hpp  Drawable.cpp
archive/ImageFont/: sdl_ttf-config.cmake
archive/Objects/: Objects.cpp
assets/shaders/: fragment.glsl  pointFrag.glsl  pointVert.glsl  vertex.glsl
cmake/: helper.cmake  listDeps.py  merge.py  modOrder.py  parse.py
cmake/helper/: helper.cmake  merge.cmake
cmake/toolchains/: linux.cmake  windows.cmake
conan/profiles/: windows-mingw
docker/: build.sh
src/: main.cpp
src/API/: CMakeLists.txt
src/API/opengl/: GlHelperFunctions.cpp  GlMesh.cpp  HelperFunctionsOpengl.hpp
src/engine/: CMakeLists.txt  Camera.hpp  HelperFunctions.cpp  HelperFunctions.hpp  Mesh.hpp  PhysicsObject.cpp  PhysicsObject.h  RenderObject.cpp  RenderObject.h
src/engine/BigObjects/: BaseObject.cpp  BigObjects.hpp  Camera.cpp  DefaultCube.cpp  Drawable.cpp  Singularity.cpp
src/engine/CustomMath/: CustomMath.hpp
src/engine/Rendering/: Buff.cpp  Buff.hpp  Core.hpp  DefaultCube.cpp  DrawScene.cpp  FloatObjects.cpp  FloatObjects.hpp  FloatObjectsInternal.cpp  Font.cpp  FrameBuffer.cpp  FrameBuffer.hpp  GetApi.cpp  Image.cpp  Image.hpp  Mesh.hpp  Objects.cpp  Objects.hpp  RenderObjects.hpp  Rendering.hpp  Shader.cpp  Shader.hpp  Store.cpp  Window.cpp  Window.hpp
src/engine/Rendering/apis/opengl/: CMakeLists.txt  CompileShaders.cpp  Draw.cpp  FrameBuffer.cpp  GlBuff.cpp  GlImage.cpp  GlMesh.cpp  GlRendering.hpp  GlShader.cpp  GlWindow.cpp  Plugin.cpp
src/engine/Rendering/base/: Font.cpp  GetApi.cpp  Image.cpp  Objects.cpp  Rendering.hpp  Window.cpp
src/engine/Rendering/internal/: CombineParams.hpp  Internal.hpp
src/engine/Rendering/opengl/: CompileShaders.cpp  Draw.cpp  FrameBuffer.cpp  GlBuff.cpp  GlImage.cpp  GlMesh.cpp  GlRendering.hpp  GlShader.cpp  GlWindow.cpp  Plugin.cpp
src/engine/Scripting/: Compile.cpp  LogFunctions.cpp  Process.cpp  ScriptingCompalation.cpp  ScriptingHeaders.hpp
src/engine/Scripting/JIT/: Compile.cpp  CompileMaximal.cpp  CompileMinimal.cpp  ExternForward.cpp  LoggingForward.cpp  RenderingForward.cpp  loggingForward.cpp
src/engine/Scripting/Standard/: Buffer.hpp  Draw.hpp  Engine.hpp  FrameBuffer.hpp  Helper.hpp  Image.hpp  Logging.hpp  Mesh.hpp  Module.hpp  Rendering.hpp  Shader.hpp  Window.hpp
src/engine/customMath/: BigVec.hpp  Bigint.hpp  CustomMath.hpp
src/engine/objects/: BaseObject.cpp  Camera.cpp  Drawable.cpp  MeshChunks.cpp  Objects.hpp  PhysicsObject.cpp  RenderObject.cpp  RenderObject2d.cpp  Singularity.cpp
src/engine/opengl/: GlHelperFunctions.cpp  GlImage.cpp  GlMesh.cpp  GlShader.cpp  HelperFunctionsOpengl.hpp  OpenGlMesh.hpp
src/engine/rendering/base/: GetApi.cpp  HelperFunctions.cpp  HelperFunctions.hpp  Rendering.cpp  Rendering.hpp
src/engine/rendering/opengl/: GlHelperFunctions.cpp  GlImage.cpp  GlMesh.cpp  GlShader.cpp  GlWindow.cpp  HelperFunctionsOpengl.hpp  Plugin.cpp
src/engine/scripting/: LuaObjects.cpp  ObjectPassthrough.cpp  ScriptingCompalation.cpp  ScriptingHeaders.cpp  ScriptingHeaders.hpp
src/game/: config.yaml
src/game/scripts/: main.lua
src/game/shaders/: 2dFragment.glsl  2dVertex.glsl  pointFrag.glsl
src/modules/BigObjects/: BaseObject.cpp  BigObjects.hpp  Camera.cpp  fragment.glsl_old  main.cpp
src/modules/BigObjects/assets/shaders/: instanceVert.glsl  pointFrag.glsl
src/modules/ImageFont/: Font.cpp  Font.hpp
src/modules/Objects/: DefaultCube.cpp  main.cpp
src/modules/example/src/: hello.cpp
src/modules/example1/: CMakeLists.txt  config.txt  config.yaml
src/modules/example1/assets/shaders/: debugFrag.glsl  debugVert.glsl  floatCube.slang  floatFrag.glsl  floatVert.glsl  instanceCube.slang
src/modules/example1/shaders/: .base.slang  .colors.slang  debugVector.slang  floatCube.slang  instanceCube.slang
src/modules/example1/src/: GenMesh.hpp  Objects.hpp  hello.cpp  main.cpp
src/modules/std/: CMakeLists.txt  config.txt  config.yaml
src/modules/std/include/: GenMesh.hpp
src/modules/std/src/: add.cpp  setup.cpp  subtract.cpp
src/scenes/test/: config.yaml
src/scenes/test/assets/shaders/: pointVert.glsl
